# eventostec-rs

./: .gitignore  Cargo.toml  README.md  compose.yml
migrations/: 20240622124459_create_event_table.sql
src/: main.rs
src/aws/: config.rs
src/db/: config.rs
src/event/: dtos.rs  handlers.rs  mod.rs  models.rs  repositories.rs
