[package]
name = "eventostec"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["multipart"]}
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
aws-sdk-s3 = "1.38.0"
aws-config = "1.5.3"
